--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Calendario</title>
+
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div>
     <h1>Enero 2021</h1>
     <ol>
-      <li>1</li>
+      <li class="first-day">1</li>
       <li>2</li>
       <li>3</li>
       <li>4</li>
