Add days to week

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <div>
     <h1>Enero 2021</h1>
     <ol>
+      <li>Lun</li>
+      <li>Mar</li>
+      <li>Mié</li>
+      <li>Jue</li>
+      <li>Vie</li>
+      <li>Sáb</li>
+      <li>Dom</li>
+
       <li class="first-day">1</li>
       <li>2</li>
       <li>3</li>
