one month, junuary

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <div>
+  <div class="container">
     <h1>Enero 2021</h1>
     <ol>
-      <li>Lun</li>
-      <li>Mar</li>
-      <li>Mié</li>
-      <li>Jue</li>
-      <li>Vie</li>
-      <li>Sáb</li>
-      <li>Dom</li>
+      <li class="day-name">Lun</li>
+      <li class="day-name">Mar</li>
+      <li class="day-name">Mié</li>
+      <li class="day-name">Jue</li>
+      <li class="day-name">Vie</li>
+      <li class="day-name">Sáb</li>
+      <li class="day-name">Dom</li>
 
       <li class="first-day">1</li>
       <li>2</li>
