--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Calendario</title>
+  <title>Calendario Anahí</title>
 
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <h1> Feliz 2021 Anahí</h1>
   <div class="container">
     <div class="container-junuary">
-      <h1>Enero 2021</h1>
+      <h2>Enero</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -56,7 +57,7 @@
       </ol>
     </div>
     <div class="container-february">
-      <h1>Febrero 2021</h1>
+      <h2>Febrero</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -97,7 +98,7 @@
       </ol>
     </div>
     <div class="container-march">
-      <h1>Marzo 2021</h1>
+      <h2>Marzo</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -141,7 +142,7 @@
       </ol>
     </div>
     <div class="container-april">
-      <h1>Abril 2021</h1>
+      <h2>Abril</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -184,7 +185,7 @@
       </ol>
     </div>
     <div class="container-may">
-      <h1>Mayo 2021</h1>
+      <h2>Mayo</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -228,7 +229,7 @@
       </ol>
     </div>
     <div class="container-june">
-      <h1>Junio 2021</h1>
+      <h2>Junio</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -271,7 +272,7 @@
       </ol>
     </div>
     <div class="container-july">
-      <h1>Julio 2021</h1>
+      <h2>Julio</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -315,7 +316,7 @@
       </ol>
     </div>
     <div class="container-agust">
-      <h1>Agosto</h1>
+      <h2>Agosto</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -359,7 +360,7 @@
       </ol>
     </div>
     <div class="container-september">
-      <h1>Septiembre 2021</h1>
+      <h2>Septiembre</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -403,7 +404,7 @@
       </ol>
     </div>
     <div class="container-october">
-      <h1>Octubre 2021</h1>
+      <h2>Octubre</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -447,7 +448,7 @@
       </ol>
     </div>
     <div class="container-november">
-      <h1>Noviembre 2021</h1>
+      <h2>Noviembre</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
@@ -491,7 +492,7 @@
       </ol>
     </div>
     <div class="container-december">
-      <h1>Diciembre 2021</h1>
+      <h2>Diciembre</h2>
       <ol>
         <li class="day-name">Lun</li>
         <li class="day-name">Mar</li>
